--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>RocketSeat - NLW Copa</title>
 </head>
 
-<body class="green">
+<body class="blue">
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="Logo da NLW">
