alterações para temas

--- a/index.html
+++ b/index.html
@@ -15,10 +15,18 @@
     <title>RocketSeat - NLW Copa</title>
 </head>
 
-<body class="blue">
+<body>
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="Logo da NLW">
+
+            <nav>
+                <div id="botao">
+                    <button class="btn1" onclick="yellowMode()">Amarelo</button>
+                    <button class="btn2" onclick="blueMode()">Azul</button>
+                    <button class="btn3" onclick="greenMode()">Verde</button>
+                </div>
+            </nav>
         </header>
         <main id="cards"></main>
     </div>
