--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/logo rocketseat.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/copaq.png" type="image/x-icon">
     <title>RocketSeat - NLW Copa</title>
 </head>
 
@@ -19,6 +19,7 @@
     <div id="app">
         <header>
             <img src="./assets/logo.svg" alt="Logo da NLW">
+            <img src="./assets/copaq.png" alt="Logo da copa 2022" style="width: 170px; height: 50%;">
 
             <nav>
                 <div id="botao">
@@ -27,6 +28,7 @@
                     <button class="btn3" onclick="greenMode()">Verde</button>
                 </div>
             </nav>
+
         </header>
         <main id="cards"></main>
     </div>
