--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <nav>
                 <div id="botao">
-                    <button class="btn1" onclick="yellowMode()">Amarelo</button>
+                    <button class="btn1" onclick="yellowMode()">Amareloo</button>
                     <button class="btn2" onclick="blueMode()">Azul</button>
                     <button class="btn3" onclick="greenMode()">Verde</button>
                 </div>
