mudança dos temas

--- a/index.html
+++ b/index.html
@@ -24,13 +24,10 @@
             <button class="btn3" onclick="greenMode()">Verde</button>
         </div>
     </nav>
-    
+
     <div id="app">
         <header>
-
-            <img src="./assets/logo.svg" alt="Logo da NLW">
-            <img src="./assets/copaq.png" alt="Logo da copa 2022" style="width: 170px; height: 50%;">
-
+            <img class="logoQatar" src="./assets/copaq.png" alt="Logo da copa 2022" style="width: 170px; height: 50%;">
         </header>
         <main id="cards"></main>
     </div>
