mudança dos temas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./assets/copaq.png" type="image/x-icon">
-    <title>RocketSeat - NLW Copa</title>
+    <link rel="shortcut icon" href="./assets/copaIcon.png" type="image/x-icon">
+    <title>Calendário Copa 2022</title>
 </head>
 
 <body>
