--- a/partidas.html
+++ b/partidas.html
@@ -7,31 +7,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/assets/img/copaIcon.png" type="image/x-icon">
-    <title>Calendário Copa 2022</title>
+    <title>Partidas</title>
 </head>
 
 <body>
 
-    <nav>
-        <div id="botao">
-            <button class="btn1" onclick="yellowMode()">Amarelo</button>
-            <button class="btn2" onclick="blueMode()">Azul</button>
-            <button class="btn3" onclick="greenMode()">Verde</button>
-        </div>
-    </nav>
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+            <a class="nav-link" href="/grupos.html">Grupos</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="/partidas.html">Partidas</a>
+        </li>
+    </ul>
 
-    <div id="app">
-        <header>
-            <img class="logoQatar" src="/assets/img/copaq.png" alt="Logo da copa 2022"
-                style="width: 170px; height: 50%;">
-        </header>
-        <main id="cards"></main>
+    <div class="container">
+        <div class="row mt-3" id="container"></div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -41,7 +38,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="/assets/js/partidas.js"></script>
 </body>
 
 </html>
