mudança nos diretórios

--- a/grupos.html
+++ b/grupos.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/grupos.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/grupos.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/assets/img/copaIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/copaIcon.png" type="image/x-icon">
     <title>Grupos</title>
 </head>
 
@@ -19,10 +19,10 @@
         <div class="row" id="container"></div>
     </div>
 
-    <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/bootstrap.min.js"></script>
-    <script src="/assets/js/grupos.js"></script>
-    <script src="/assets/js/common.js"></script>
+    <script src="./assets/js/jquery.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/grupos.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
