--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/assets/img/copaIcon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/img/copaIcon.png" type="image/x-icon">
     <title>Calendário Copa 2022</title>
 </head>
 
@@ -21,7 +21,7 @@
 
     <div id="app">
         <header>
-            <img class="logoQatar" src="/assets/img/copaq.png" alt="Logo da copa 2022"
+            <img class="logoQatar" src="./assets/img/copaq.png" alt="Logo da copa 2022"
                 style="width: 170px; height: 50%;">
         </header>
         <main id="cards"></main>
@@ -35,8 +35,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script src="/assets/js/script.js"></script>
-    <script src="/assets/js/common.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/common.js"></script>
 </body>
 
 </html>
