--- a/grupos.html
+++ b/grupos.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/libs/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.1/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/copaIcon.png" type="image/x-icon">
@@ -21,6 +22,7 @@
 
     <script src="./assets/js/libs/jquery.min.js"></script>
     <script src="./assets/js/libs/bootstrap.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
     <script src="./assets/js/common.js"></script>
     <script src="./assets/js/grupos.js"></script>
 </body>
