--- a/partidas_hoje.html
+++ b/partidas_hoje.html
@@ -22,9 +22,7 @@
         <div class="input-group mb-3">
             <input type="date" id="date-game" class="form-control" id="inputGroupSelect04"
                 aria-label="Example select with button addon">
-            <div class="input-group-append">
-                <button class="btn btn-outline" id="date-button" type="button">Procurar</button>
-            </div>
+            <div class="input-group-append"></div>
         </div>
 
         <div class="row" id="container"></div>
