mudança no ao vivo

--- a/acontecendo.html
+++ b/acontecendo.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
         integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/copaIcon.png" type="image/x-icon">
@@ -18,6 +19,13 @@
 
     <div class="container ">
         <div class="row" id="container"></div>
+
+        <div class="input-group mb-3">
+            <input type="date" id="date-game" class="form-control" id="inputGroupSelect04"
+                aria-label="Example select with button addon">
+            <div class="input-group-append"></div>
+        </div>
+        <div class="row" id="container2"></div>
     </div>
 
     <script src="./assets/js/libs/jquery.min.js"></script>
