--- a/partidas.html
+++ b/partidas.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- AniCollection.css library -->
+    <link rel="stylesheet" href="http://anijs.github.io/lib/anicollection/anicollection.css">
     <link rel="stylesheet" href="./assets/css/libs/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
@@ -19,6 +21,7 @@
     </div>
 
     <script src="./assets/js/libs/jquery.min.js"></script>
+    <script src="./assets/js/libs/anijs.js"></script>
     <script src="./assets/js/libs/bootstrap.min.js"></script>
     <script src="./assets/js/common.js"></script>
     <script src="./assets/js/partidas.js"></script>
