--- a/index.html
+++ b/index.html
@@ -5,34 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/libs/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style-nlw.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700;900&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="./assets/img/copaIcon.png" type="image/x-icon">
-    <title>Calendário Copa 2022</title>
+    <title>Acontecendo</title>
 </head>
 
 <body>
-
     <div id="nav"></div>
 
-    <div id="app">
-        <header>
-            <img class="logoQatar" src="./assets/img/copaq.png" alt="Logo da copa 2022"
-                style="width: 170px; height: 50%;">
-        </header>
-        <main id="cards"></main>
+    <div class="container ">
+        <div class="row" id="container"></div>
+
+        <div class="input-group mb-3">
+            <input type="date" id="date-game" class="form-control" id="inputGroupSelect04"
+                aria-label="Example select with button addon">
+            <div class="input-group-append"></div>
+        </div>
+        <div class="row" id="container2"></div>
     </div>
 
     <script src="./assets/js/libs/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
     <script src="./assets/js/libs/bootstrap.min.js"></script>
     <script src="./assets/js/common.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/acontecendo.js"></script>
 </body>
 
 </html>
