alteração nos nomes

--- a/index_nlw.html
+++ b/index_nlw.html
@@ -32,7 +32,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/libs/bootstrap.min.js"></script>
     <script src="./assets/js/common.js"></script>
-    <script src="./assets/js/index.js"></script>
+    <script src="./assets/js/index_nlw.js"></script>
 </body>
 
 </html>
