--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <body>
     <div id="nav"></div>
 
-    <div class="container ">
+    <div class="container-fluid">
         <div class="row" id="container"></div>
 
-        <div class="input-group mb-3 mt-3">
+        <div class="input-group mb-3">
             <input type="date" id="date-game" class="form-control" id="inputGroupSelect04"
                 aria-label="Example select with button addon">
             <div class="input-group-append"></div>
