--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div id="nav"></div>
 
-    <div class="container-fluid">
+    <div class="container">
         <div class="row" id="container"></div>
 
         <div class="input-group mb-3">
